--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:value="ITNBZ-74OW3-FDK3D-3V6DX-RXX3J-RSFVP" />
 
         <activity
-            android:name="com.bhq.ui.GuideViewDoor"
+            android:name="com.bhq.ui.Login_"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,7 +49,7 @@
             </intent-filter>
         </activity>
         <!-- 在线ui -->
-        <activity android:name="com.bhq.ui.Login_" />
+        <activity android:name="com.bhq.ui.GuideViewDoor" />
         <activity android:name="com.bhq.ui.GuideViewActivity" />
         <activity android:name="com.bhq.ui.MainActivity_" />
         <activity android:name="com.bhq.ui.ShowAnimal_" />
