--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,10 @@
 apply plugin: 'com.android.application'
+//apply plugin: 'android-apt'
+//def AAVersion = '3.2'
+
+//def getSourceSetName(variant) {
+//    return new File(variant.dirName).getName();
+//}
 
 android {
     compileSdkVersion 22
@@ -29,4 +35,16 @@ dependencies {
     compile files('libs/universal-image-loader-1.9.4-with-sources.jar')
     compile files('libs/wgh_module_mpchartlib.jar')
     compile files('libs/xutil.jar')
+
+//    apt "org.androidannotations:androidannotations:$AAVersion"
+//    compile "org.androidannotations:androidannotations-api:$AAVersion"
 }
+
+//apt {
+//    arguments {
+////        androidManifestFile variant.outputs[0].processResources.manifestFile
+//        androidManifestFile variant.processResources.manifestFile
+//        resourcePackageName  'com.bhq'
+//    }
+//}
+
