修复androidannotations运行异常

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,7 @@
         <activity android:name="com.media.RecordActivity" />
         <activity android:name="com.media.HomeFragmentActivity" />
         <!-- 离线ui -->
+        <activity android:name="com.bhq.ui.Temp_" />
         <activity android:name="com.bhq.ui.Offline_Diary_" />
         <activity android:name="com.bhq.ui.Offline_MainActivity_" />
         <activity android:name="com.bhq.ui.Offline_PatrolContent_" />
