--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,21 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'android-apt'
-//def AAVersion = '3.2'
+apply plugin: 'android-apt'
+def AAVersion = '3.2'
 
 //def getSourceSetName(variant) {
 //    return new File(variant.dirName).getName();
 //}
-
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        // replace with the current version of the Android plugin
+        classpath 'com.android.tools.build:gradle:1.0.0'
+        // the latest version of the android-apt plugin
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
+    }
+}
 android {
     compileSdkVersion 22
     buildToolsVersion "20.0.0"
@@ -20,6 +30,10 @@ android {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+
+//            minifyEnabled false  // nova versão
+
+//            proguardFiles getDefaultProguardFile('android.txt proguard-'), 'proguard-rules.pro'
         }
     }
 }
@@ -36,15 +50,16 @@ dependencies {
     compile files('libs/wgh_module_mpchartlib.jar')
     compile files('libs/xutil.jar')
 
-//    apt "org.androidannotations:androidannotations:$AAVersion"
-//    compile "org.androidannotations:androidannotations-api:$AAVersion"
+    apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
 }
 
-//apt {
-//    arguments {
-////        androidManifestFile variant.outputs[0].processResources.manifestFile
+apt {
+    arguments {
+//        androidManifestFile variant.outputs[0].processResources.manifestFile
 //        androidManifestFile variant.processResources.manifestFile
-//        resourcePackageName  'com.bhq'
-//    }
-//}
+        androidManifestFile variant.processResources.manifestFile
+        resourcePackageName 'com.bhq'
+    }
+}
 
