1彻底解决进入主界面卡的问题 2修复事件bug 3修复定位问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,6 +110,10 @@
             android:exported="false" >
         </service>
         <service
+            android:name="com.service.UpdateData"
+            android:exported="false" >
+        </service>
+        <service
             android:name="com.service.UpdateApkInBackground"
             android:exported="false" >
         </service>
